--- a/Acer/vscode.settings.json
+++ b/Acer/vscode.settings.json
@@ -1,6 +1,6 @@
 {
     "workbench.iconTheme": "vscode-icons",
-    "workbench.colorTheme": "Predawn",
+    "workbench.colorTheme": "Monokai",
     "workbench.startupEditor": "newUntitledFile",
     "workbench.settings.editor": "json",
     "workbench.settings.openDefaultSettings": true,
@@ -15,6 +15,8 @@
     "editor.formatOnSave": true,
     "editor.quickSuggestionsDelay": 100,
     "editor.minimap.enabled": false,
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
     "debug.console.fontSize": 16,
     "terminal.integrated.fontSize": 16,
     "terminal.integrated.fontWeight": "600",
@@ -29,5 +31,11 @@
     "zenMode.centerLayout": false,
     "zenMode.fullScreen": false,
     "zenMode.hideLineNumbers": false,
-    "zenMode.hideTabs": false
+    "zenMode.hideTabs": false,
+    "dart.sdkPath": "C:\\src\\flutter\\bin\\cache\\dart-sdk",
+    "dart.flutterCreateAndroidLanguage": "kotlin",
+    "dart.flutterCreateIOSLanguage": "swift",
+    "dart.flutterCreateOrganization": "omprojects",
+    "dart.flutterSdkPath": "C:\\src\\flutter",
+    "dart.enableSdkFormatter": true
 }
