add sfdx java home path

--- a/Acer/vscode.settings.json
+++ b/Acer/vscode.settings.json
@@ -1,45 +1,45 @@
 {
-    "workbench.iconTheme": "vscode-icons",
-    "workbench.startupEditor": "newUntitledFile",
-    "workbench.settings.editor": "json",
-    "workbench.settings.openDefaultSettings": true,
-    "workbench.statusBar.feedback.visible": false,
-    "python.pythonPath": "C:\\Users\\mszczesny\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
-    "python.formatting.provider": "black",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "editor.fontSize": 16,
-    "editor.fontWeight": "300",
-    "editor.fontFamily": "Source Code Pro, monospace",
-    "editor.formatOnSave": true,
-    "editor.quickSuggestionsDelay": 100,
-    "editor.minimap.enabled": false,
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "debug.console.fontSize": 16,
-    "terminal.integrated.fontSize": 16,
-    "terminal.integrated.fontWeight": "600",
-    "code-runner.executorMap": {
-        "python": "$pythonPath -u $fullFileName",
-    },
-    "code-runner.clearPreviousOutput": true,
-    "code-runner.saveFileBeforeRun": true,
-    "[plaintext]": {
-        "editor.quickSuggestions": false
-    },
-    "zenMode.centerLayout": false,
-    "zenMode.fullScreen": false,
-    "zenMode.hideLineNumbers": false,
-    "zenMode.hideTabs": false,
-    "dart.sdkPath": "C:\\src\\flutter\\bin\\cache\\dart-sdk",
-    "dart.flutterCreateAndroidLanguage": "kotlin",
-    "dart.flutterCreateIOSLanguage": "swift",
-    "dart.flutterCreateOrganization": "omprojects",
-    "dart.flutterSdkPath": "C:\\src\\flutter",
-    "dart.enableSdkFormatter": true,
-    "go.goroot": "C:\\Go",
-    "go.autocompleteUnimportedPackages": true,
-    "go.buildOnSave": "package",
-    "go.lintOnSave": "package",
-    "go.vetOnSave": "package"
+  "workbench.iconTheme": "vscode-icons",
+  "workbench.startupEditor": "newUntitledFile",
+  "workbench.settings.editor": "json",
+  "workbench.settings.openDefaultSettings": true,
+  "python.pythonPath": "C:\\Users\\mszczesny\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+  "python.formatting.provider": "black",
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "editor.fontSize": 16,
+  "editor.fontWeight": "300",
+  "editor.fontFamily": "Source Code Pro, monospace",
+  "editor.formatOnSave": true,
+  "editor.quickSuggestionsDelay": 100,
+  "editor.minimap.enabled": false,
+  "editor.tabSize": 4,
+  "editor.insertSpaces": true,
+  "debug.console.fontSize": 16,
+  "terminal.integrated.fontSize": 16,
+  "terminal.integrated.fontWeight": "600",
+  "code-runner.executorMap": {
+    "python": "$pythonPath -u $fullFileName"
+  },
+  "code-runner.clearPreviousOutput": true,
+  "code-runner.saveFileBeforeRun": true,
+  "[plaintext]": {
+    "editor.quickSuggestions": false
+  },
+  "zenMode.centerLayout": false,
+  "zenMode.fullScreen": false,
+  "zenMode.hideLineNumbers": false,
+  "zenMode.hideTabs": false,
+  "dart.sdkPath": "C:\\src\\flutter\\bin\\cache\\dart-sdk",
+  "dart.flutterCreateAndroidLanguage": "kotlin",
+  "dart.flutterCreateIOSLanguage": "swift",
+  "dart.flutterCreateOrganization": "omprojects",
+  "dart.flutterSdkPath": "C:\\src\\flutter",
+  "dart.enableSdkFormatter": true,
+  "go.goroot": "C:\\Go",
+  "go.autocompleteUnimportedPackages": true,
+  "go.buildOnSave": "package",
+  "go.lintOnSave": "package",
+  "go.vetOnSave": "package",
+  "salesforcedx-vscode-apex.java.home": "C:\\Program Files\\Amazon Corretto\\jdk1.8.0_212"
 }
